// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status render animated 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  75%, 100% {
    -webkit-transform: scale(2);
    -moz-transform: scale(2);
    -ms-transform: scale(2);
    transform: scale(2);
    opacity: 0;
  }
}

.css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-1oiabdd-StyledAnimatedCircle {
  position: absolute;
  width: 10px;
  height: 10px;
  opacity: 0.75;
  border-radius: 100%;
  -webkit-animation: animation-0 1.1s cubic-bezier(0, 0, 0.2, 1) infinite;
  animation: animation-0 1.1s cubic-bezier(0, 0, 0.2, 1) infinite;
  background-color: #22c8a2;
}

.css-1wbk14j-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #22c8a2;
}

<span
    class="css-1oymmk9-Container ew1r0gb0"
  >
    <span
      class="css-1oiabdd-StyledAnimatedCircle ew1r0gb1"
    />
    <span
      class="css-1wbk14j-StyledCircle ew1r0gb2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status render with className 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-1wbk14j-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #22c8a2;
}

<span
    class="test css-1oymmk9-Container ew1r0gb0"
  >
    <span
      class="css-1wbk14j-StyledCircle ew1r0gb2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="danger" 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-6g00ox-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #dd3252;
}

<span
    class="css-1oymmk9-Container ew1r0gb0"
  >
    <span
      class="css-6g00ox-StyledCircle ew1r0gb2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="info" 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-11tzzz5-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #3f6ed8;
}

<span
    class="css-1oymmk9-Container ew1r0gb0"
  >
    <span
      class="css-11tzzz5-StyledCircle ew1r0gb2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="neutral" 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-2uypwr-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #4a4f62;
}

<span
    class="css-1oymmk9-Container ew1r0gb0"
  >
    <span
      class="css-2uypwr-StyledCircle ew1r0gb2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="success" 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-1wbk14j-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #22c8a2;
}

<span
    class="css-1oymmk9-Container ew1r0gb0"
  >
    <span
      class="css-1wbk14j-StyledCircle ew1r0gb2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="warning" 1`] = `
<DocumentFragment>
  .css-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.css-152d2d2-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #ff8c69;
}

<span
    class="css-1oymmk9-Container ew1r0gb0"
  >
    <span
      class="css-152d2d2-StyledCircle ew1r0gb2"
    />
  </span>
</DocumentFragment>
`;
